--- a/scripts/Dockerfile-backend
+++ b/scripts/Dockerfile-backend
@@ -2,8 +2,8 @@ FROM python:3.12
 
 WORKDIR /app
 
-COPY ./requirements.txt /code/requirements.txt
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
-COPY ./app /code/app
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
+COPY ./app .
 
-CMD ["fastapi", "run", "app/backend.py", "--port", "8000"]
+CMD ["fastapi", "run", "app/backend.py", "--host", "0.0.0.0", "--port", "8000"]
