--- a/scripts/Dockerfile-backend
+++ b/scripts/Dockerfile-backend
@@ -6,4 +6,4 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 COPY ./app .
 
-CMD ["fastapi", "run", "app/backend.py", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["fastapi", "run", "app/backend-app.py", "--host", "0.0.0.0", "--port", "8000"]
