run the demo in k3d
convert the demo to run in k3d with a Deployment and Service for each
component.

there are a handful of small bugfixes rolled up in to this change,
including autoformatting with ruff, switching to the published version
of junction-python, and fixing a route bug in the frontend.

--- a/deploy/ezbake.yaml
+++ b/deploy/ezbake.yaml
@@ -66,10 +66,7 @@ spec:
           command: ["./ezbake"]
           args: ["--all-namespaces"]
           image: ghcr.io/junction-labs/junction-labs/ezbake:latest
-          imagePullPolicy: IfNotPresent
-          env:
-            - name: RUST_LOG
-              value: "ezbake=trace,warn"
+          imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Service
