--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,4 @@ pydantic-settings
 uvicorn
 whoosh
 chromadb
-https://github.com/junction-labs/junction-client/releases/download/tip-python/junction-0.1.0-cp38-abi3-macosx_11_0_arm64.whl
+junction-python
