All demos working again, with documentation up to date.

--- a/deploy/04_ring_hash.yaml
+++ b/deploy/04_ring_hash.yaml
@@ -26,6 +26,6 @@ spec:
         - configMapRef:
             name: wineinfo-backend-config
         env:
-        - name: CATALOG_DEMO_MOJIBAKE
+        - name: RECS_DEMO_FAILURE
           value: "true"
             
