--- a/deploy/03_retries.yaml
+++ b/deploy/03_retries.yaml
@@ -26,5 +26,5 @@ spec:
         - configMapRef:
             name: wineinfo-backend-config
         env:
-        - name: RECS_DEMO_FAILURE
+        - name: SEARCH_DEMO_LATENCY
           value: "true"
