--- a/demo/deploy/05_argo_rollouts_catalog_policy.yaml
+++ b/demo/deploy/05_argo_rollouts_catalog_policy.yaml
@@ -24,9 +24,9 @@ spec:
       - setHeaderRoute:
           name: canary-route1
           match:
-          - headerName: x-username
+          - headerName: baggage
             headerValue:
-              exact: admin
+              exact: username=admin
       - pause: {}
       - setCanaryScale:
           matchTrafficWeight: true
