--- a/demo/deploy/05_argo_rollouts_catalog_policy.yaml
+++ b/demo/deploy/05_argo_rollouts_catalog_policy.yaml
@@ -19,22 +19,22 @@ spec:
         managedRoutes:
           - name: canary-route1
       steps:
-      - setCanaryScale:
-          replicas: 1
-      - setHeaderRoute:
-          name: canary-route1
-          match:
-          - headerName: baggage
-            headerValue:
-              exact: username=admin
-      - pause: {}
-      - setCanaryScale:
-          matchTrafficWeight: true
-      - setHeaderRoute:
-          name: canary-route1
-      - setWeight: 25
-      - pause: {}
-      - setWeight: 100
+        - setCanaryScale:
+            replicas: 1
+        - setHeaderRoute:
+            name: canary-route1
+            match:
+              - headerName: baggage
+                headerValue:
+                  regex: username=.*username=admin(,|$).*
+        - pause: {}
+        - setCanaryScale:
+            matchTrafficWeight: true
+        - setHeaderRoute:
+            name: canary-route1
+        - setWeight: 25
+        - pause: {}
+        - setWeight: 100
   revisionHistoryLimit: 0
   selector:
     matchLabels:
@@ -47,13 +47,22 @@ spec:
         service: catalog
     spec:
       containers:
-      - name: main
-        image: wineinfo-python:latest
-        imagePullPolicy: IfNotPresent
-        command: ["fastapi", "run", "/app/catalog_app.py", "--host", "0.0.0.0", "--port", "8000"]
-        envFrom:
-        - configMapRef:
-            name: wineinfo-config
-        env:
-        - name: CATALOG_DEMO_MOJIBAKE
-          value: "true"
+        - name: main
+          image: wineinfo-python:latest
+          imagePullPolicy: IfNotPresent
+          command:
+            [
+              "fastapi",
+              "run",
+              "/app/catalog_app.py",
+              "--host",
+              "0.0.0.0",
+              "--port",
+              "8000",
+            ]
+          envFrom:
+            - configMapRef:
+                name: wineinfo-config
+          env:
+            - name: CATALOG_DEMO_MOJIBAKE
+              value: "true"
