Got everything working except load test.

--- a/demo/deploy/05_argo_rollouts_catalog_policy.yaml
+++ b/demo/deploy/05_argo_rollouts_catalog_policy.yaml
@@ -26,7 +26,7 @@ spec:
             match:
               - headerName: baggage
                 headerValue:
-                  regex: username=.*username=admin(,|$).*
+                  regex: .*username=admin(,|$).*
         - pause: {}
         - setCanaryScale:
             matchTrafficWeight: true
