--- a/deploy/wineinfo.yaml
+++ b/deploy/wineinfo.yaml
@@ -5,13 +5,13 @@ metadata:
   name: wineinfo-config
 data:
   DATA_PATH: /app/data/gen
-  JUNCTION_ADS_SERVER: grpc://host.docker.internal:8008
+  JUNCTION_ADS_SERVER: grpc://ezbake.junction:8008
   USE_JUNCTION: "true"
   CATALOG_SERVICE: "http://wineinfo-catalog"
   SEARCH_SERVICE: "http://wineinfo-search"
   RECS_SERVICE: "http://wineinfo-recs"
   PERSIST_SERVICE: "http://wineinfo-persist"
-  NEXTAUTH_URL: "http://localhost:30010"
+  NEXTAUTH_URL: "http://localhost:8010"
   COLUMNS: "9999" # Helps FastAPI logs not wrap lines
 ---
 apiVersion: apps/v1
