--- a/demo/deploy/04_ring_hash.yaml
+++ b/demo/deploy/04_ring_hash.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wineinfo-recs
+  name: wineinfo-embeddings
   labels:
     app: wineinfo
 spec:
@@ -10,18 +10,18 @@ spec:
   selector:
     matchLabels:
       app: wineinfo
-      service: recs
+      service: embeddings
   template:
     metadata:
       labels:
         app: wineinfo
-        service: recs
+        service: embeddings
     spec:
       containers:
       - name: main
         image: wineinfo-python:latest
         imagePullPolicy: IfNotPresent
-        command: ["fastapi", "run", "/app/recs_app.py", "--host", "0.0.0.0", "--port", "80"]
+        command: ["fastapi", "run", "/app/embeddings_app.py", "--host", "0.0.0.0", "--port", "80"]
         envFrom:
         - configMapRef:
             name: wineinfo-config
